# pandemic-simulator-compartment

./: .gitignore  ABC_MODEL_GUIDE.md  Dockerfile  LICENSE  MII_PUBLICATION.md  README.md  TESTING.md  TPU_GCP_computing.ipynb  backup_Dockerfile  debug_abc_validation.py  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  temp_build_and_push_docker.sh  temp_gcp_notebook.ipynb  test_abc_model.py
.claude/: MODEL_AUTHORING_REFERENCE.md
.github/workflows/: build.yml  container.yml  disease-pipeline.yml  model-artifact.yml  release.yml  smoke-tests.yml  tests.yml
compartment/: batch_simulation_manager.py  covid_jax_model.py  driver.py  generate_artifact.py  helpers.py  interventions.py  main.py  model.py  parameters.py  registry.py  run_simulation.py  runtime.py  schema_generator.py  simulation_manager.py  simulation_postprocessor.py  temperature.py
compartment/batch_helpers/: s3.py  simulation_helpers.py
compartment/cloud_helpers/: gql.py  graphql_queries.py  s3.py  simulation_helpers.py
compartment/contact_matrices/: __init__.py  aggregator.py  loader.py
compartment/examples/: README.md
compartment/migration/: README.md
compartment/migration/compartment/: .gitignore  README.md  covid_jax_model.py  dengue_jax_model.py  helpers.py  local-run.py  main.py  pyproject.toml  requirements.txt  simulation_manager.py  simulation_postprocessor.py
compartment/migration/compartment/batch_helpers/: graphql_queries.py  s3.py  simulation_helpers.py
docs/: CONTACT_MATRICES.md  DEVELOPING_MODELS.md  GRAVITY_MODEL.md  INTERVENTIONS.md  UNCERTAINTY_QUANTIFICATION.md
reference/: dlang-mpox-advanced-exmaple-config.json  my-config-file.json  novel-respiratory-advanced-example-config.json  novel-respiratory-basic-example-config.json  novel-respiratory-demographics-example-config.json  novel-vector-borne-advanced-example-config.json  novel-vector-borne-basic-example-config.json  pansim-config.json
tests/: README.md  __init__.py  conftest.py  helpers.py  test_artifact.py  test_contact_matrices.py  test_covid_jax_model.py  test_demographics.py  test_dengue.py  test_dengue_jax_model.py  test_generate_artifact_model_dir.py  test_helpers.py  test_integration.py  test_interventions.py  test_models.py  test_smoke.py  test_uncertainty.py  test_uncertainty_helpers.py  test_uncertainty_rebuild.py  test_validation.py  test_variance_auto_promote.py
(+107 files in other folders)
