[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pandemic-simulator-compartment"
version = "0.1.0"
description = "Compartment models made with systems of ordinary differential equations for use in the World Health Organization's Pandemic Simulator app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.13",
    "geopy>=2.4.1",
    "jax>=0.8.1",
    "numpy>=2.3.5",
    "pandas==2.3.3",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "requests>=2.32.3",
    "scipy>=1.16.3",
]

[tool.hatch.build.targets.wheel]
packages = ["compartment"]
