[project]
name = "compartment-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.13",
    "geopy>=2.4.1",
    "jax>=0.6.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scipy>=1.15.3",
]
